--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,20 @@
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flash-messages">
+            {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+    <img src="{{ url_for('static', filename='images/logo_pink.png') }}" alt="decor" class="corner-logo">
     {% block content %}{% endblock %}
 
     <footer class="footer">
-        <p>Contact: sineoykuyasar@example.com | <a href="https://github.com/sineoykuyasar/bookshelf" target="_blank">GitHub</a></p>
+        <p>Contact: sineoyku@gmail.com | <a href="https://github.com/sineoyku/bookshelf" target="_blank">GitHub</a></p>
     </footer>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
