--- a/templates/register.html
+++ b/templates/register.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section class="signin-page auth-page">
-    <h1>Sign In</h1>
-    <form action="{{ url_for('login') }}" method="post" class="auth-form">
+<section class="register-page auth-page">
+    <h1>Register</h1>
+    <form action="{{ url_for('register') }}" method="post" class="auth-form">
         <label for="username">Username</label>
         <input type="text" id="username" name="username" required>
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
-        <button type="submit" class="btn primary">Sign In</button>
+        <button type="submit" class="btn primary">Register</button>
     </form>
-    <p class="switch-link">Don't have an account? <a href="{{ url_for('register') }}">Register</a>.</p>
+    <p class="switch-link">Already have an account? <a href="{{ url_for('login') }}">Sign in</a>.</p>
 </section>
 {% endblock %} 
